[WFCORE-3892] added function for jbossws scripts